# phonebook

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  worker.py
data/: base.txt
models/: Contact.py
service/: Phonebook.py
utils/: console.py  criteria.py  header.py
